--- a/workshop/exercise-3/style.css
+++ b/workshop/exercise-3/style.css
@@ -1,1 +1,16 @@
-/* ...crickets... */
+.title {
+    margin: 0;
+    font-size: 25px;
+    text-align: center;
+}
+.subtitle {
+    margin: 0;
+    text-align: center;
+}
+.content {
+    margin: 0;
+    font-family: Comic Sans Ms;
+}
+.emph{
+    font-style: italic;
+}
