--- a/workshop/exercise-4/style.css
+++ b/workshop/exercise-4/style.css
@@ -1,35 +1,32 @@
-#centered {
+
+h1,
+p,
+div,
+h2 {
+  background: grey;
+  margin: 0;
+}
+
+.centered {
   text-align: center;
 }
 
-.title {
+#title {
   font-size: 3rem;
 }
 
-subtitle {
+#subtitle {
   font-size: 1.5rem;
 }
 
-.div {
-  background-color: gray;
-}
-
-#li {
+li {
   list-style-type: none;
 }
 
 #content {
   text-decoration: underline;
-  background: grey;
 }
 
-monospaced {
+.monospaced {
   font-family: monospace;
-}
-
-h1,
-p,
-h2 {
-  background: grey;
-  margin: 0;
 }
