--- a/workshop/exercise-5/style.css
+++ b/workshop/exercise-5/style.css
@@ -18,52 +18,48 @@ li {
 
 /* Corrupted CSS below */
 /* ------------------- */
-b*** {
-  bac******d: #eaeaee;
-  ****-**mily: 'Yanone Kaffeesatz', sans-serif;
-  ***t-si*e: 24px;
-  max-*****: 600px;
-  margin: 0 * * * *;
-  padding: 32 * *;
+body {
+  background: #eaeaee;
+  font-family: 'Yanone Kaffeesatz', sans-serif;
+  font-size: 24px;
+  max-width: 600;
+  margin: 5px 60px; 
+  padding: 50px;
 }
 
 h1,
 h2 {
-  $#%$#^#$%#$%: 'Bangers', cursive;
-}
-
-#h2 {
-  text-decoration: underline;
+  font-family: 'Bangers', cursive;
 }
 
 .centered {
-  text*****n: centre;
+  text-align: center;
 }
 
 .title {
-  ***t-size: 48px;
+  font-size: 48px;
+}
+
+.h2 {
+  text-decoration: underline;
 }
 
 .content {
-  ......................;
-  ...........: 5px;
-  ............: 48px;
-  ........: 20px;
+  background: white;
+  border: 5px;
+  margin: 48px;
+  padding: 20px;
 }
 
 .content ul {
-  margin-top: .....;
-  padding-left: .....;
+  margin-top: 15px;
+  padding-left: 15px;
 }
 
 .element {
-  list-*****-type: square;
-}
-
-.first {
-  color: #ffffff;
+  list-style-type: square;
 }
 
 .second {
-  font-weight: cold;
+  font-weight: bold;
 }
