--- a/workshop/exercise-9/style.css
+++ b/workshop/exercise-9/style.css
@@ -3,13 +3,25 @@ img {
 }
 
 .img1 {
+  position: relative;
+  z-index: 5;
 }
 
 .img2 {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  z-index: -5;
 }
 
 .img3 {
+  position: fixed;
+  top: 50%;
+  left: 50%;
 }
 
 .img4 {
+  position: absolute;
+  bottom: 0px;
+  right: 0px;
 }
